syntax = "proto3";

package pudicitia.hr;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "pudicitia.common/grpc/types.proto";

option csharp_namespace = "Pudicitia.Enterprise.Gateway";

service Organization {
  rpc ListDepartments (ListDepartmentsRequest) returns (ListDepartmentsResponse);
  rpc CreateDepartment (CreateDepartmentRequest) returns (pudicitia.common.GuidRequired);
  rpc UpdateDepartment (UpdateDepartmentRequest) returns (google.protobuf.Empty);
  rpc DeleteDepartment (DeleteDepartmentRequest) returns (google.protobuf.Empty);

  rpc PaginateEmployees (PaginateEmployeesRequest) returns (PaginateEmployeesResponse);
  rpc GetEmployee (GetEmployeeRequest) returns (GetEmployeeResponse);
  rpc CreateEmployee (CreateEmployeeRequest) returns (pudicitia.common.GuidRequired);

  rpc ListJobs (ListJobsRequest) returns (ListJobsResponse);
}

message ListDepartmentsRequest {
}

message ListDepartmentsResponse {
  repeated Department items = 1;

  message Department {
    pudicitia.common.GuidRequired id = 1;
    string name = 2;
    pudicitia.common.GuidValue parent_id = 3;
  }
}

message CreateDepartmentRequest {
  string name = 1;
  bool is_enabled = 2;
  pudicitia.common.GuidRequired parent_id = 3;
}

message UpdateDepartmentRequest {
  pudicitia.common.GuidRequired id = 1;
  string name = 2;
  bool is_enabled = 3;
}

message DeleteDepartmentRequest {
  pudicitia.common.GuidRequired id = 1;
}

message PaginateEmployeesRequest {
  int32 page_index = 1;
  int32 page_size = 2;
  pudicitia.common.GuidRequired department_id = 3;
}

message PaginateEmployeesResponse {
  int32 page_index = 1;
  int32 page_size = 2;
  int32 item_count = 3;
  repeated Employee items = 4;

  message Employee {
    pudicitia.common.GuidRequired id = 1;
    string name = 2;
    string display_name = 3;
    pudicitia.common.GuidRequired department_id = 4;
    pudicitia.common.GuidRequired job_id = 5;
  }
}

message GetEmployeeRequest {
  pudicitia.common.GuidRequired id = 1;
}

message GetEmployeeResponse {
  pudicitia.common.GuidRequired id = 1;
  string name = 2;
  string display_name = 3;
  pudicitia.common.GuidRequired department_id = 4;
  pudicitia.common.GuidRequired job_id = 5;
}

message CreateEmployeeRequest {
  string name = 1;
  string display_name = 2;
  google.protobuf.Timestamp birth_date = 3;
  int32 gender = 4;
  int32 marital_status = 5;
}

message ListJobsRequest {
}

message ListJobsResponse {
  repeated Job items = 1;

  message Job {
    pudicitia.common.GuidRequired id = 1;
    string title = 2;
  }
}